MPX Changelog file
== 27.11.06 ==
mi:     free allocated memory in miDCCloseScreen and in miDCInitialize in case
	of errors.
	Some copyright notices.
	misprite.c passes DeviceIntPtr around and down to DC (previously
	miCursorInfoPtr and the plain device id).
	Large cleanup in misprite.c to avoid code duplication.

Files:
	mi/midispcur.c
	mi/misprite.c
	mi/misprite.h

== 23.11.06 ==
mi:	closing memory leak, miPointer is freed in miPointerCloseScreen
	bugfix: uninitialized pPointer in miPointerGetPosition ifndef MPX
	adding DeviceIntPtr parameter to ScreenRec's cursor functions.
	cleanup of miPointer code to use same scheme in each function

dix:	MPHasCursor() function determines checking whether to invoke
	cursor rendering.

animcur: adding DeviceIntPtr parameter to cursor functions but animcur relies
	 on the core pointer right now.

xfixes: adding DeviceIntPtr parameter to cursor functions but xfixes relies on
	the core pointer right now.

rac:	adding DeviceIntPtr parameter to cursor functions but RAC relies on
	the core pointer right now.

ramdac:	adding DeviceIntPtr parameter to cursor functions but ramdac relies on
	the core pointer right now.

Files:
	mi/mipointer.c
	mi/mipointer.h
	mi/micursor.c
	mi/mi.h
	mi/mieq.c
	include/cursor.h
	include/inputstr.h
	include/scrnintstr.h
	include/dix.h
	dix/events.c
	dix/cursor.c
	Xext/xtest.c
	render/animcur.c
	xfixes/cursor.c
	XTrap/xtrapddmi.c
	xkb/ddxFakeMtn.c
	hw/xfree86/common/xf86Cursor.c
	hw/xfree86/common/xf86RandR.c
	hw/xfree86/rac/xf86RAC.c
	hw/xfree86/ramdac/xf86Cursor.c
	hw/xfree86/dri/dri.c


== 22.11.06 ==

mi:     added DevToSprite() conversion function
        fixed miSpriteRealize to use passed pDev argument instead of looping.

dix:    changed sprite dependency and added MPX functionality to parts of
        events.c (XineramaChangeToCursor, XineramaCheckPhysLimits,
        XineramaConstrainCursor)

Xi:	fix: accessing other->buttons for keyboard segfaulted the server

Files:
        mi/misprite.c